feat: docs user - delet, edit
