# backend/internal/entity/errors.go
@@ -1,0 +1,6 @@
+package entity
+
+type ErrorEntity struct {
+    Code    int    `json:"code"`
+    Message string `json:"message"`
+}
